fix: adapt card item number color for dark mode

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -618,6 +618,10 @@
   color: var(--zc-form-card-item-color);
 }
 
+[data-theme="dark"] .zotlo-checkout__card-item .zotlo-checkout__card-item-number {
+  color: #0D0626;
+}
+
 .zotlo-checkout__card-item .zotlo-checkout__card-item-expiry-date {
   font-size: 10px;
   line-height: 14px;
